--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
   <title>Pokedex</title>
+<link rel="shortcut icon" href="https://image.winudf.com/v1/image/Y29tLlBvR28uUG9rZWRleF9pY29uXzBfZjMxZjA1ZDI/icon=170x.png"/>
 </head>
 <body>
 <style>
