--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
   <title>Pokedex</title>
-<link rel="shortcut icon" type="icon/png" href="icon.png"/>
+  <link rel = "icon" href = 
+"https://image.winudf.com/v1/image/Y29tLlBvR28uUG9rZWRleF9pY29uXzBfZjMxZjA1ZDI/icon=170x.png" 
+        type = "image/x-icon">
 </head>
 <body>
 <style>
